--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,12 @@
 <resources>
 
     <string name="app_name">NextGIS Mobile</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
+    <string name="action_add">Add layer</string>
+    <string name="action_add_local">Add layer (local)</string>
+    <string name="action_add_remote">Add layer (web)</string>
+    <string name="action_add_ngw">Add layer (NGW)</string>
 
 </resources>
