--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,8 @@
     <string name="credits"><![CDATA[Some icons used in the application are from:<br>- <a href=\"http://icons8.com/android-icons\">Icons8.com</a>, licensed under a <a href=\"http://creativecommons.org/licenses/by-nd/3.0/\">CC BY-ND 3.0 license</a><br>- <a href=\"http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html\">romannurik.github.io</a>, licensed under a <a href=\"http://creativecommons.org/licenses/by/3.0/\">CC BY 3.0 license</a>]]></string>
     <string name="copyright"><![CDATA[Copyright © <a href=\"http://nextgis.com\">NextGIS</a>, 2012–2015]]></string>
     <string name="action_about">About</string>
+    <string name="add_current_place">Add current place</string>
+    <string name="add_new_geometry">Add new geometry</string>
+    <string name="add_geometry_by_walk">Add geometry by walk</string>
 
 </resources>
