--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,7 @@
     <string name="add_new_geometry">Add new geometry</string>
     <string name="add_geometry_by_walk">Add geometry by walk</string>
     <string name="last_sync_time">Last sync time</string>
+    <string name="warn_no_edit_layers">There is no editable layers</string>
+    <string name="select_layer">Select layer to edit</string>
 
 </resources>
