--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="last_sync_time">Last sync time</string>
     <string name="warn_no_edit_layers">There is no editable layers</string>
     <string name="select_layer">Select layer to edit</string>
+    <string name="menu_locate">Locate</string>
 
 </resources>
