--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,9 @@
     <string name="warn_no_edit_layers">There is no editable layers</string>
     <string name="select_layer">Select layer to edit</string>
     <string name="menu_locate">Locate</string>
+    <string name="select_file">Select file to create layer</string>
+    <string name="warning_install_file_manager">Please install a File Manager</string>
+    <string name="error_file_unsupported">The file type is unsupported</string>
+    <string name="warning_not_implemented">Not implemented yet</string>
 
 </resources>
