Add track min time/distance settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,10 @@
     <string name="tracks_summary">Tracks settings</string>
     <string name="track_start">Start new track</string>
     <string name="track_stop">Stop track</string>
+    <string name="tracks_reload">Restart current track to apply changes</string>
+    <string name="pref_min_time">Minimum update time</string>
+    <string name="pref_min_distance">Minimum update distance</string>
+    <string name="meters">m</string>
+    <string name="seconds">s</string>
 
 </resources>
