Add status panel visibility setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,7 @@
     <string name="action_delete">Delete</string>
     <string name="action_attributes">Attributes</string>
     <string name="action_edit">Edit</string>
+    <string name="show_status_panel">Status info panel</string>
+    <string name="show_status_panel_summary">Show current status info at bottom panel</string>
 
 </resources>
