--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,5 +85,6 @@
     <string name="show_status_panel">Status info panel</string>
     <string name="show_status_panel_summary">Show current status info at bottom panel</string>
     <string name="show_current_location">Show current location</string>
+    <string name="edit_layer">Edit \'%s\' layer</string>
 
 </resources>
