Fix crash on google drive file

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -84,6 +84,7 @@
     <string name="action_edit">Редактировать</string>
     <string name="show_status_panel">Панель статуса</string>
     <string name="show_status_panel_summary">Показать панель статуса внизу экрана</string>
+    <string name="show_current_location">Show current location</string>
     <string name="edit_layer">Edit \'%s\' layer</string>
 
 </resources>
