--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,5 +86,7 @@
     <string name="show_status_panel_summary">Show current status info at bottom panel</string>
     <string name="show_current_location">Show current location</string>
     <string name="edit_layer">Edit \'%s\' layer</string>
+    <string name="attributes_next">Next</string>
+    <string name="attributes_prev">Previous</string>
 
 </resources>
