Fix attributes fragment
 Saved state implemented
 Cache list items order and boundaries
 UI fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,5 +88,7 @@
     <string name="edit_layer">Edit \'%s\' layer</string>
     <string name="attributes_next">Next</string>
     <string name="attributes_prev">Previous</string>
+    <string name="attributes_title">Attributes</string>
+    <string name="attributes_last_item">No more items</string>
 
 </resources>
