--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -86,5 +86,8 @@
     <string name="show_status_panel_summary">Показать панель статуса внизу экрана</string>
     <string name="show_current_location">Show current location</string>
     <string name="edit_layer">Edit \'%s\' layer</string>
-
+    <string name="attributes_next">Следующий</string>
+    <string name="attributes_prev">Предыдущий</string>
+    <string name="attributes_title">Атрибуты</string>
+    <string name="attributes_last_item">Не записей</string>
 </resources>
