--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="pref_location_accuracy_cell">Cellular</string>
     <string name="location">Location</string>
     <string name="tracks">Tracks</string>
-    <string name="location_summary">Location settings</string>
+    <string name="location_summary">Location and geometry by walking settings</string>
     <string name="tracks_summary">Tracks settings</string>
     <string name="track_start">Start new track</string>
     <string name="track_stop">Stop track</string>
