--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="warning_map_moving">Dangerous operation! Don\'t cancel it or kill the application during the data moving to new location! You data may be broken or lost!</string>
     <string name="warning_folder_should_be_empty">The folder should be empty. Cancel operation.</string>
     <string name="frequentest">, as frequent as possible</string>
+    <string name="accurate_measures_count">Count of GPS measures</string>
     <string name="action_delete">Delete</string>
     <string name="action_attributes">Attributes</string>
     <string name="action_edit">Edit</string>
