--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -94,5 +94,6 @@
     <string name="points_for_edit">Точки (можно редактировать)</string>
     <string name="lines_for_edit">Линии (можно редактировать)</string>
     <string name="polygons_for_edit">Полигоны (можно редактировать)</string>
+    <string name="press_aback_again">Нажите назад еще раз для выхода</string>
 
 </resources>
