--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="show_current_location">Show current location</string>
     <string name="edit_layer">Edit \'%s\' layer</string>
     <string name="attributes_title">Attributes</string>
+    <string name="compass_title">Compass</string>
     <string name="refresh">Refresh</string>
     <string name="points_for_edit">Points (can be edited)</string>
     <string name="lines_for_edit">Lines (can be edited)</string>
