Add theme switching to settings #197

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -99,5 +99,7 @@
     <string name="lines_for_edit">Линии (можно редактировать)</string>
     <string name="polygons_for_edit">Полигоны (можно редактировать)</string>
     <string name="press_aback_again">Нажите назад еще раз для выхода</string>
+    <string name="interface_title">Интерфейс</string>
+    <string name="theme">Тема</string>
 
 </resources>
