--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -73,6 +73,10 @@
     <string name="coordinates_format">Формат координат</string>
     <string name="select_coordinates_format">Выберите формат координат</string>
     <string name="coordinates_format_summary">Выберите текст для координат</string>
+    <string name="map_bg">Фон карты</string>
+    <string name="map_bg_light">Светлый</string>
+    <string name="map_bg_neutral">Нейтральный</string>
+    <string name="map_bg_dark">Темный</string>
     <string name="map_path">Путь к картам</string>
     <string name="map_path_summary">Путь к папке для карт. Изменение может привести к тому, что папка не будет очищаться при удаление приложения</string>
     <string name="select_map_path">Выберите путь к папке для карт</string>
