--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -112,4 +112,6 @@
     <string name="action_point_by_tap">Создать новую точку</string>
     <string name="new_field">Новое поле</string>
     <string name="empty_field_name">Имя не может быть пустым</string>
+    <string name="same_field_name">Поле с таким именем уже существует</string>
+    <string name="same_layer_name">Слой с таким именем уже существует</string>
 </resources>
