--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,10 +28,10 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
-    <string name="action_add">Open layer</string>
-    <string name="action_add_local">Local</string>
-    <string name="action_add_remote">Web</string>
-    <string name="action_add_ngw">NGW</string>
+    <string name="action_add">New layer</string>
+    <string name="action_add_local">Open local</string>
+    <string name="action_add_remote">Add web</string>
+    <string name="action_add_ngw">Add from NGW</string>
     <string name="general">General</string>
     <string name="general_summary">General settings</string>
     <string name="keep_screen_on">Keep map screen on</string>
